_includes/css/grayscale.css
/*!
 * Start Bootstrap - Grayscale Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

body {
    width: 100%;
    height: 100%;
    font-family: 'Arvo', Arial, sans-serif;
    color: {{ site.color.primary-dark }};
    background-color: #fff;
}

html {
    width: 100%;
    height: 100%;
}

h1 {
    margin: 0 0 35px;
    text-transform: uppercase;
    font-family: 'Arvo', Arial, sans-serif;
    font-weight: 500;
    letter-spacing: 1px;
}

h2 {
    margin: 0 0 35px;
    font-family: 'Arvo', Arial, sans-serif;
    font-weight: 500;
    letter-spacing: 1px;
    font-size: 37px;
}

h3 {
    margin: 0 0 35px;
    font-family: 'Arvo', Arial, sans-serif;
    font-weight: 500;
    letter-spacing: 1px;
}

h4 {
    margin: 0 0 35px;
    font-family: 'Arvo', Arial, sans-serif;
    font-weight: 500;
    letter-spacing: 1px;
}

h5 {
    margin: 0 0 35px;
    font-family: 'Arvo', Arial, sans-serif;
    font-weight: 500;
    letter-spacing: 1px;
}

h6 {
    margin: 0 0 35px;
    font-family: 'Arvo', Arial, sans-serif;
    font-weight: 500;
    letter-spacing: 1px;
}

p {
    margin: 0 0 25px;
    font-size: 18px;
    line-height: 1.5;
}

@media(min-width:767px) {
    p {
        margin: 0 0 35px;
        font-size: 20px;
        line-height: 1.6;
    }
}

a {
    color: {{ site.color.links }};
    -webkit-transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    transition: all .2s ease-in-out;
}

a:hover,
a:focus {
    text-decoration: none;
    color: #11505d;
}

.light {
    font-weight: 400;
}

.navbar-custom {
    margin-bottom: 0;
    border-bottom: 1px solid rgba(255,255,255,.3);
    text-transform: uppercase;
    font-family: 'Arvo', Arial, sans-serif;
    background-color: {{ site.color.primary-dark }};
}

.navbar-brand {
	padding: 0px;
}

.navbar-custom .navbar-brand {
    font-weight: 700;
}

.navbar-custom .navbar-brand:focus {
    outline: 0;
}

.navbar-custom .navbar-brand .navbar-toggle {
    padding: 4px 6px;
    font-size: 16px;
    color: #fff;
}

.navbar-custom .navbar-brand .navbar-toggle:focus,
.navbar-custom .navbar-brand .navbar-toggle:active {
    outline: 0;
}

.navbar-custom a {
    color: #fff;
}

.navbar-custom .nav li.active {
    outline: none;
    background-color: rgba(255,255,255,.3);
}

.navbar-custom .nav li a {
    -webkit-transition: background .3s ease-in-out;
    -moz-transition: background .3s ease-in-out;
    transition: background .3s ease-in-out;
}

.navbar-custom .nav li a:hover,
.navbar-custom .nav li a:focus,
.navbar-custom .nav li a.active {
    outline: 0;
    background-color: rgba(255,255,255,.3);
}

a.nav-link {
	padding: 15px 5px !important;
}

@media (min-width: 481px) and (max-width: 767px) {
    .nav-item {
		display: none !important;
	}
}

@media (min-width: 320px) and (max-width: 480px) {
	 .nav-item {
		display: none !important;
	}
}

@media(min-width:767px) {
    .navbar {
        padding: 20px 0;
        border-bottom: 0;
        letter-spacing: 1px;
        background: 0 0;
        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
        transition: background .5s ease-in-out,padding .5s ease-in-out;
    }

    .top-nav-collapse {
        padding: 0;
        background-color: {{ site.color.primary-dark }};
    }

    .navbar-custom.top-nav-collapse {
        border-bottom: 2px solid rgba(0,0,0,.3);
    }
}

.intro {
    display: table;
    width: 100%;
    height: auto;
    padding: 100px 0;
    text-align: center;
    background-color: rgba(0, 0, 0, 0.6);
    color: #fff;
    background: url(./img/intro-bg.jpg) no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

.intro:before, .download-section:before {
	content: "";
	left: 0; right: 0;
	top: 0; bottom: 0;
}

.intro .intro-body {
    display: table-cell;
    vertical-align: middle;
    background-color: rgba(0, 0, 0, 0.6);

}

.intro .intro-body .brand-heading {
    font-size: 40px;
}

.intro .intro-body .intro-text {
    font-size: 18px;
}

@media(min-width:767px) {
    .intro {
        height: 100%;
        padding: 0;
    }

    .intro .intro-body .brand-heading {
        font-size: 100px;
    }

    .intro .intro-body .intro-text {
        font-size: 25px;
    }
}

.btn-circle {
    width: 70px;
    height: 70px;
    margin-top: 15px;
    padding: 7px 16px;
    border: 2px solid #fff;
    border-radius: 35px;
    font-size: 40px;
    color: #fff;
    background: 0 0;
    -webkit-transition: background .3s ease-in-out;
    -moz-transition: background .3s ease-in-out;
    transition: background .3s ease-in-out;
}

.btn-circle:hover,
.btn-circle:focus {
    outline: 0;
    color: #fff;
    background: rgba(255,255,255,.1);
}

.btn-circle i.animated {
    -webkit-transition-property: -webkit-transform;
    -webkit-transition-duration: 1s;
    -moz-transition-property: -moz-transform;
    -moz-transition-duration: 1s;
}

.btn-circle:hover i.animated {
    -webkit-animation-name: pulse;
    -moz-animation-name: pulse;
    -webkit-animation-duration: 1.5s;
    -moz-animation-duration: 1.5s;
    -webkit-animation-iteration-count: infinite;
    -moz-animation-iteration-count: infinite;
    -webkit-animation-timing-function: linear;
    -moz-animation-timing-function: linear;
}

@-webkit-keyframes pulse {
    0 {
        -webkit-transform: scale(1);
        transform: scale(1);
    }

    50% {
        -webkit-transform: scale(1.2);
        transform: scale(1.2);
    }

    100% {
        -webkit-transform: scale(1);
        transform: scale(1);
    }
}

@-moz-keyframes pulse {
    0 {
        -moz-transform: scale(1);
        transform: scale(1);
    }

    50% {
        -moz-transform: scale(1.2);
        transform: scale(1.2);
    }

    100% {
        -moz-transform: scale(1);
        transform: scale(1);
    }
}

.content-section {
    padding-top: 100px;
}

.download-section {
    width: 100%;
    padding: 50px 0;
    color: #fff;
    background: url(./img/downloads-bg.jpg) no-repeat center center scroll;
    background-color: {{ site.color.primary-dark }};
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

.meaning-section {
    width: 100%;
    padding: 50px 0;
    color: #fff;
    background: url(./img/dustin.jpg) no-repeat center center scroll;
    background-color: {{ site.color.primary-dark }};
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

.meaning-section h1, h2 {
    text-rendering: optimizeLegibility;
    text-align: center;
    white-space: pre-wrap;
    text-transform: uppercase;
}

.meaning-section h1 {
    font-weight: 400;
    font-style: italic;
    font-size: 99px;
    letter-spacing: 0em;
    line-height: 1em;
    text-transform: none;
    margin: .67em 0;
}

.meaning-section p {
    font-weight: 800;
    font-size: 25px;
    letter-spacing: .01em;
    line-height: 1.6em;
}

.color-swap {
	background-color: {{ site.color.primary-dark }};
	color: #ffffff;
}

@media(min-width:767px) {
    .content-section {
        padding-top: 100px;
    }

    .download-section {
        padding: 150px 0;
    }

    .meaning-section {
        padding: 250px 0;
    }

    #map {
        height: 400px;
        margin-top: 250px;
    }
}

.btn {
    text-transform: uppercase;
    font-family: 'Arvo', Arial, sans-serif;
    font-weight: 400;
    -webkit-transition: all .3s ease-in-out;
    -moz-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
}

.btn-default {
    border: 1px solid #fff;
    color: #fff;
    background-color: transparent;
}

.btn-default:hover,
.btn-default:focus {
    border: 1px solid {{ site.color.links }};
    outline: 0;
    color: {{ site.color.primary-dark }};
    background-color: {{ site.color.links }};
}

ul.banner-social-buttons {
    margin-top: 0;
}

ul.banner-social-buttons li {
    margin-bottom: 15px;
}

@media(max-width:1199px) {
    ul.banner-social-buttons {
        margin-top: 15px;
    }
}

@media(max-width:767px) {
    ul.banner-social-buttons li {
        display: block;
        margin-bottom: 20px;
        padding: 0;
    }

    ul.banner-social-buttons li:last-child {
        margin-bottom: 0;
    }
}

footer {
    padding: 50px 0;
    text-transform: uppercase;
    color: #999999;
    background: {{ site.color.primary-dark }};
}

footer p {
    margin: 0;
    font-size: 15px;
    font-color: #999999;
}

::-moz-selection {
    text-shadow: none;
    background: #fcfcfc;
    background: rgba(255,255,255,.2);
}

::selection {
    text-shadow: none;
    background: #fcfcfc;
    background: rgba(255,255,255,.2);
}

img::selection {
    background: 0 0;
}

img::-moz-selection {
    background: 0 0;
}

body {
    webkit-tap-highlight-color: rgba(255,255,255,.2);
}

.margin30 {
	margin-top:30px;
}

@media only screen and (max-width: 768px) {
  /* For mobile phones: */
    .mmargin30 {
		margin-top:30px;
	}

	.meaning-section h1 {
	    font-size: 72px;
	}
}

